--- a/Flask-Leaflet/templates/base.html
+++ b/Flask-Leaflet/templates/base.html
@@ -96,7 +96,10 @@
                     <a class="nav-link active" href="#">Carto</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="{{ url_for('dashboard') }}">Dashboard</a>
+                  <a class="nav-link active" href="{{ url_for('tableau') }}">Tableau général</a>
+              </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Dashboard</a>
                 </li>
             </ul>
         </div>
